--- a/style.css
+++ b/style.css
@@ -1,43 +1,50 @@
+body{
+    background-color: tomato;
+}
+
 .container{
+    background-color: blueviolet;
     flex-direction: column;
     display: flex;
-    margin: 20vw;
-    width: 58vw;
-    height: 99vw;
-    justify-content: start;
+    margin: 0vw 32.5vw;
+    width: 30vw;
+    height: 50vw;
+    justify-content: center;
     align-items: center;
-    border: 4px solid black;
-    border-radius: 8vw;
-    padding: 2vw;
+    border: 2px solid black;
+    border-radius: 4vw;
+    padding: 1vw;
 }
 
 .screen{
-    margin: 3vw;
-    width: 50vw;
-    height: 20vw;
-    border: 4px solid black;
-    border-radius: 6vw;
+    background-color: aqua;
+    width: 26.5vw;
+    height: 12.5vw;
+    border: 2px solid black;
+    border-radius: 3vw;
 }
 
 .buttons-grid{
-    margin: 3vw;
+    margin: 2vw;
     display: flex;
-    width: 54vw;
-    height: 60vw;
+    width: 27.5vw;
+    height: 30vw;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
 
 .btn{
-    font-size: 5vw;
-    margin: 0.75vw 0.75vw;
-    width: 12vw;
-    height: 12vw;
-    border-radius: 6vw;
-    outline: 2px solid black;
+    background-color: rgb(210, 75, 25);
+    text-align: center;
+    font-size: 2vw;
+    margin: 0.375vw;
+    width: 6vw;
+    height: 6vw;
+    border-radius: 3vw;
+    outline: 1px solid black;
 }
 
 .btn-clr, .btn-op{
-    width: 25vw;
+    width: 12.9vw;
 }
