--- a/style.css
+++ b/style.css
@@ -6,22 +6,26 @@ body{
     background-color: blueviolet;
     flex-direction: column;
     display: flex;
-    margin: 0vw 32.5vw;
+    margin: auto;
     width: 30vw;
+    min-width: 300px;
     height: 50vw;
+    min-height: 500px;
     justify-content: center;
     align-items: center;
     border: 2px solid black;
-    border-radius: 4vw;
+    border-radius: max(4vw,40px);
     padding: 1vw;
 }
 
 .screen{
     background-color: aqua;
     width: 26.5vw;
+    min-width: 265px;
     height: 12.5vw;
+    min-height: 125px;
     border: 2px solid black;
-    border-radius: 3vw;
+    border-radius: max(3vw,30px);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 3vw;
     text-align: right;
@@ -35,7 +39,9 @@ body{
     margin: 2vw;
     display: flex;
     width: 27.5vw;
+    min-width: 275px;
     height: 30vw;
+    min-height: 300px;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
@@ -44,14 +50,17 @@ body{
 .btn{
     background-color: rgb(210, 75, 25);
     text-align: center;
-    font-size: 2vw;
-    margin: 0.375vw;
+    font-size: max(2vw,18px);
+    margin: max(0.375vw, 2px);
     width: 6vw;
+    min-width: 60px;
     height: 6vw;
-    border-radius: 3vw;
+    min-height: 60px;
+    border-radius: max(3vw,60px);
     outline: 1px solid black;
 }
 
 .btn-clr, .btn-op{
     width: 12.9vw;
+    min-width: 129px;
 }
