--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     border: 2px solid black;
     border-radius: max(3vw,30px);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 2vw;
+    font-size: max(2vw, 20px);
     text-align: right;
 }
 
@@ -36,7 +36,7 @@ body{
 }
 
 .history {
-    font-size: 3vw;
+    font-size: max(3vw, 30px);
 }
 
 .buttons-grid{
